<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#00FF0A"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/tvActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/etIP"
        android:layout_width="220dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/serverIP"
        android:inputType="text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvActivity" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="222dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/port"
        android:inputType="text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/etIP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etIP"
        app:layout_constraintTop_toBottomOf="@+id/etIP" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#03FD0D"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="@+id/etPort"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/etPort"
        app:layout_constraintTop_toBottomOf="@+id/etPort" />

    <Spinner
        android:id="@+id/spnPlayers"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginBottom="156dp"
        android:layout_weight="1"
        android:backgroundTint="#5D75FF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/player"
        app:layout_constraintEnd_toStartOf="@+id/etNickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etNickname" />

    <EditText
        android:id="@+id/etNickname"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etPort"
        app:layout_constraintStart_toStartOf="@+id/etPort"
        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />

    <Button
        android:id="@+id/btnEnterRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#03FC0D"
        android:text="@string/enterRoom"
        app:layout_constraintEnd_toEndOf="@+id/btnConnect"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/btnConnect"
        app:layout_constraintTop_toBottomOf="@+id/etNickname" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="#03FB0D"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvOpponentSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:text="@string/opponentSelection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOutputMessages"
        android:layout_width="376dp"
        android:layout_height="74dp"
        android:layout_marginBottom="52dp"
        android:textColor="#00FF0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>